Fix sobre cabecera, z-index, tamaño en carrera en fixed y botón.

--- a/scss/atoms/_buttons.scss
+++ b/scss/atoms/_buttons.scss
@@ -17,7 +17,7 @@
 
 input[type="submit"]{font-size: 100%; margin-top: 32px; -webkit-appearance: unset; appearance: unset;}
 
-#help_btn{margin: 0 auto; background: $c-morado; color: #ffffff; position: fixed; left: 16px;  bottom: 24px; width: auto;  z-index: 10; box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+#help_btn{margin: 0 auto; background: $c-morado; color: #ffffff; position: fixed; left: 16px;  bottom: 24px; width: auto; right: auto;  z-index: 10; box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
   &:not(.double).white{background: #fff; color: $c-morado;
     &:hover{color: #fff; background: $c-morado; transition: 0.3s;}
   }
@@ -38,9 +38,21 @@ input[type="submit"]{font-size: 100%; margin-top: 32px; -webkit-appearance: unse
   .btn, #help_btn{display: inline-block; width: auto; font-size: 0.875rem;}
   input[type="submit"]{margin-top: 0;}
   .home .button-container #help_btn.white{position: relative; bottom: auto; right: auto; }
+  #hero-career #career-nav.fixed  nav.container{
+    position: relative;
+    #help_btn {
+      right: 16px;
+    }
+  }
 }
 @include respond-above(lg){
   .btn, #help_btn{padding: 12px 32px; line-height:1;}
   .btn-container{margin-top: 56px;}
   .link-primary-container{margin: 56px 0 0 0;}
+  #help_btn{position: absolute}
+}
+@include respond-above(xxl) {
+  #help_btn {
+    bottom: 28px;
+  }
 }
