--- a/scss/organisms/_heroes.scss
+++ b/scss/organisms/_heroes.scss
@@ -130,7 +130,7 @@
       }
     }
     #career-nav{
-      &.fixed.nav-up{top: 84px;}
+      &.fixed.nav-up{top: 75px;}
       ul li{padding: 32px 0;
         &.active span:after{content:''; width: 100%; height: 2px; background: #000; display: block; position: absolute; animation: 0.5s in-out forwards; bottom: -8px;}
         span:hover{font-weight: bold;}
@@ -174,6 +174,9 @@
 }
 
 
+@include respond-above(xl){
+  #hero-career #career-nav.fixed.nav-up{top: 85px}
+}
 @include respond-above(xxl){
   #hero-career #career-nav.fixed.nav-up{top: 87px}
 }
